@@ -1,0 +1,11 @@
+import stdio;
+import decloverride;
+
+int f(void) { return 77; }
+
+int
+main(void)
+{
+    printf("%d\n", f());
+    return 0;
+}
